package at.ac.fhcampuswien;

public class App {
    public static void main(String[] args) {
    }
}
