package at.ac.fhcampuswien;

public class Menu {
    private AppController controller;
    private static final String INVALID_INPUT_MESSAGE = "";
    private static final String EXIT_MESSAGE = "";

    public void start() {

    }

    private void handleInput(String input) {

    }

    private void getArticleCount(AppController ctrl) {

    }

    private void getTopHeadlinesAustria(AppController ctrl) {

    }

    private void getAllNewsBitcoin(AppController ctrl) {

    }

    private static void printExitMessage() {

    }

    private static void printInvalidInputMessage() {

    }

    private static void printMenu() {

    }
}
